@@ -3,6 +3,7 @@ Changes since KSpread 2.2
 
 Features
 --------
+Manual page breaks.
 
 Enhancements
 ------------
